--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -14,9 +14,9 @@
 
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
-          <h1 class="display-3">Wikiville: Social, Markdown Wikis</h1>
-          <p class="lead">Create and share markdown wikis.</p>
-          <a href="/users/signup" class="btn btn-primary btn-lg">Sign up</a>
+          <h1 class="display-3 text-white my-5">Wikiville: Social, Markdown Wikis</h1>
+          <h3 class="text-white my-5 py-4">Create and share markdown wikis.</h3>
+          <a href="/users/signup my-4" class="btn btn-primary btn-lg">Sign up</a>
         </header>
 
       </main>
