--- a/src/views/static/partials/messages.ejs
+++ b/src/views/static/partials/messages.ejs
@@ -1,7 +1,7 @@
 
 <% if(messages.error || messages.notice) { %>
 
-  <div class="alert alert-<%= messages.error ? 'danger' : 'warning' %> alert-dismissible fade show" role="alert">
+  <div class="alert alert-<%= messages.error ? 'danger' : 'warning' %> alert-dismissible fade show mt-3" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
