--- a/src/views/users/downgrade.ejs
+++ b/src/views/users/downgrade.ejs
@@ -12,25 +12,20 @@
     <main class="container">
       <% include ../static/partials/messages.ejs %>
 
-      <h2>Account Downgrade</h2>
+      <h2 class='display-4 mt-5'>Account Downgrade</h2>
 
-      <ul>
-        <li> All your private wikis will become public. 
-        <li> No refund will be given
-      </ul>
+        <p><i class="fas fa-exclamation-triangle text-warning"></i> All your private wikis will become public.
+        <p><i class="fas fa-exclamation-triangle text-warning"></i> We are unable to issue any refund.
+ 
       <hr>
-      <h4> Do you still want to downgrade to standard account? </h4>
-      <hr>
-      <hr>
-      <div class="row">
-        <div class="col-md-8">
+      <lead> Do you still want to downgrade to standard account? </lead>
+
+      <div class="row mt-4">
+        <div class="col-md-1">
           <form method="POST" action="/users/downgrade">
-            <button type="submit" class="btn btn-primary">Yes</button>
+            <button type="submit" class="btn btn-danger">Yes</button>
           </form>
-          <hr>
-
-            <a href= <%= referer %> ><button class="btn btn-primary">No</button></a>
-
+          <a href= <%= referer %> ><span class="btn btn-primary mt-4">No</span></a>
         </div>
       </div>
 
