--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -11,14 +11,13 @@
 
       <% include ../static/partials/messages.ejs %>
 
-      <h1>Log in</h1>
+      <h1 class='mt-4'>Log in</h1>
 
       <form action="/users/login" method="post">
 
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-          <small class="text-muted" id="emailHelp">email address must be a valid address</small>
         </div>
 
         <div class="form-group">
@@ -27,7 +26,7 @@
           <!-- <small class="text-muted" id="passwordHelp">password must match confirmation below</small> -->
         </div>
 
-        <button type="submit" class="btn btn-primary">Log in</button>
+        <button type="submit" class="btn btn-primary mt-2">Log in</button>
       </form>
     </main>
 
