--- a/src/views/users/signup.ejs
+++ b/src/views/users/signup.ejs
@@ -12,7 +12,7 @@
     <main class="container">
       <% include ../static/partials/messages.ejs %>
 
-      <h2>Welcome to Wikiville</h2>
+      <h2 class='mt-4'>Welcome to Wikiville</h2>
       <div class="row">
         <div class="col-md-8">
           <form method="POST" action="/users/create">
@@ -29,7 +29,7 @@
               <input type="password" name="password" placeholder="Enter Password" class="form-control" />
             </div>
             <div class="form-group">
-              <label>Password:</label>
+              <label>Repeat Password:</label>
               <input type="password" name="password_conf" placeholder="Enter Password confirmation" class="form-control" />
             </div>
             <br/>
