--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -10,25 +10,18 @@
 
     <main class="container">
 
+    <div class='edit-wiki mt-5'>
       <h1 class="display-4">Edit Wiki
         <% if(wiki.private) { %>
           <span class="badge badge-warning" style="font-size:medium">Private</span>
         <% } %>
       </h1>
       <form action="/wikis/<%= wiki.id %>/update" method="post">
-        <div class="form-group">
-          <label for="title">Wiki title</label>
-          <input value="<%= wiki.title %>" type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title" id="title-input" oninput="this.editor.update()">
-        </div>
-        <div class="form-group">
-          <label for="body">Wiki body</label>
-          <textarea rows="4" class="form-control" name="body" placeholder="Enter wiki body" id="text-input" oninput="this.editor.update()"><%= wiki.body %></textarea>
-        </div>
-        <button type="submit" class="btn btn-success">Update</button>
+          <% include ./partials/editForm.ejs %>
       </form>
+    </div>
 
-      <hr>
-      <h4>Preview</h4>
+      <h4 class='mt-5'>Preview</h4>
       <div class="card border-primary mb-3">
         <div class="card-header bg-primary text-white" style="font-size:x-large" id="title-preview"><%= wiki.title %></span>
         </div>
@@ -52,13 +45,13 @@
 
       <% if(wiki.private && users!='none') { %>
         <hr>
-        <h3>Add collaborators</h3>
+        <h3 mt-4>Add collaborators</h3>
         <p>Showing all users</p>
 
         <form action="/wikis/<%= wiki.id %>/share" method="post">
 
-          <table class="table table-bordered table-dark table-striped">
-            <thead>
+          <table class="table table-hover">
+            <thead class="thead-light">
               <tr>
                 <th>Name</th>
                 <th>Email</th>
@@ -90,7 +83,7 @@
             </tbody>
           </table>
 
-          <button type="submit" class="btn btn-success">Share wiki</button>
+          <button type="submit" class="btn btn-success btn-block mx-auto mt-4" style="width: 200px">Update collaborator(s)</button>
         </form>
       <% } %>
 
