--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -13,10 +13,10 @@
         <% include ../static/partials/messages.ejs %>
 
         <!-- Jumbotron Header -->
-        <header class="jumbotron my-4">
-          <h1 class="display-3 text-white my-5">Wikiville: Social, Markdown Wikis</h1>
-          <h3 class="text-white my-5 py-4">Create and share markdown wikis.</h3>
-          <a href="/users/signup my-4" class="btn btn-primary btn-lg">Sign up</a>
+        <header class="jumbotron my-4 homepage">
+          <h1 class="display-3 text-center text-white my-5">Wikiville: Social, Markdown Wikis</h1>
+          <h3 class="text-center text-white font-weight-bold my-5 py-4">Create and share markdown wikis.</h3>
+          <a href="/users/signup" class="btn btn-block btn-primary btn-lg signup-button mx-auto my-4">Sign up</a>
         </header>
 
       </main>
