--- a/src/views/static/partials/head.ejs
+++ b/src/views/static/partials/head.ejs
@@ -3,6 +3,6 @@
 <title>Welcom to wikiville</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Gloria+Hallelujah" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oswald|Alegreya+Sans+SC|Gloria+Hallelujah" rel="stylesheet">
 
 <link rel="stylesheet" href="/css/application.css">
